# ChangeLog for app-emacs/navi2ch
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/navi2ch/ChangeLog,v 1.42 2008/06/14 13:23:38 nixnut Exp $

  14 Jun 2008; nixnut <nixnut@gentoo.org> navi2ch-1.7.5_p20070510.ebuild:
  Stable on ppc wrt bug 222039

  15 May 2008; Markus Meier <maekke@gentoo.org>
  navi2ch-1.7.5_p20070510.ebuild:
  amd64 stable, bug #222039

  15 May 2008; Raúl Porcel <armin76@gentoo.org>
  navi2ch-1.7.5_p20070510.ebuild:
  alpha/sparc stable wrt #222039

  14 May 2008; Christian Faulhammer <opfer@gentoo.org>
  navi2ch-1.7.5_p20070510.ebuild:
  stable x86, bug 222039

  14 May 2008; Markus Rothe <corsair@gentoo.org>
  navi2ch-1.7.5_p20070510.ebuild:
  Stable on ppc64; bug #222039

*navi2ch-1.7.5_p20070510 (28 Apr 2008)

  28 Apr 2008; Ulrich Mueller <ulm@gentoo.org>
  +navi2ch-1.7.5_p20070510.ebuild:
  Also add snapshot recommended by upstream, bug 219449.

*navi2ch-1.7.5_p20080325 (27 Apr 2008)

  27 Apr 2008; Ulrich Mueller <ulm@gentoo.org> files/50navi2ch-gentoo.el,
  +navi2ch-1.7.5_p20080325.ebuild:
  Add CVS snapshot, bug 219449.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing usata from metadata.xml as per #22931.

  16 Oct 2007; Christian Faulhammer <opfer@gentoo.org> navi2ch-1.7.5.ebuild:
  stable amd64, bug 195112

  12 Oct 2007; Ulrich Mueller <ulm@gentoo.org> -navi2ch-1.7.4.ebuild:
  Remove old.

  11 Oct 2007; Tom Gall <tgall@gentoo.org> navi2ch-1.7.5.ebuild:
  stable on ppc64 bug #195112

  09 Oct 2007; Raúl Porcel <armin76@gentoo.org> navi2ch-1.7.5.ebuild:
  alpha/sparc stable wrt #195112

  09 Oct 2007; Lars Weiler <pylon@gentoo.org> navi2ch-1.7.5.ebuild:
  stable ppc, bug #195112

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org> navi2ch-1.7.5.ebuild:
  stable x86, bug 195112

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org> navi2ch-1.7.5.ebuild: