@@ -1,9 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 50navi2ch-gentoo.el 139 RMD160 d0f6e5b67bb9c062ae2b80070a521bbb53d0c87b SHA1 33fbdc4a82154854ac9673b07a6f4aa553d27d93 SHA256 01b7fbe429aa7127b1d3dec2e205d02ee27666eab14cfd599cd639ce07cc864b
-DIST navi2ch-1.7.5.tar.gz 357379 RMD160 2c4520ae8058ec2cc5073ba9c27f2cae829cb3bc SHA1 68b01a035301e076c91cc19b507c9180f87293ed SHA256 47c1849b9297d855ca3fd314b1ae6342547970b13367dde699a372620c243b1e
 DIST navi2ch-cvs_0.0.20070510-1.tar.gz 441673 RMD160 4e014fa0b2a4bae57a6e0f3d143e74582885c2be SHA1 4aa90b408f0d9c037538bca65ee8bbd87712730c SHA256 14ff7860679db5f168e5da94c93664634fd1d49acf5c42174a5301a241599727
 DIST navi2ch-cvs_0.0.20080325-1.tar.gz 452010 RMD160 b7393d42a9c39a8ff1e4f2d65df3ff4d93f720c8 SHA1 c9d3ec84a9a88e602b4984de8b7b89b8c65bfef4 SHA256 a6fb11a94a26685b51a956edb313a263d4e87bf5944e25b9de7e68fc61bb6736
-EBUILD navi2ch-1.7.5.ebuild 1154 RMD160 ee6c12dd3dc5b0d4c96b6a7ca9a4d6a4475a4dce SHA1 2cce722853daea3763e36dc67210f4540ad0a53f SHA256 b0c37967a63c7806118497a0ba593ba0f9ea907cd587e6eba5a93adce55c44d3
 EBUILD navi2ch-1.7.5_p20070510.ebuild 1450 RMD160 202115a64b3d61eb547d3be0250015544858b0bd SHA1 1b0f6ba966021297878b7659cb881c3096df411a SHA256 9a7a1002cf697943874a61f3da15a96d85fd0a6ac6122811eb0db6cc49f0d82f
 EBUILD navi2ch-1.7.5_p20080325.ebuild 1453 RMD160 dbf3f974b549bdea6fca6f9876773984167faab0 SHA1 ca61627d759168866d6440f042bd22bcb4611cd4 SHA256 40ce537ea65fe7fd160e86dedf5108173b0607189a139c402965beb37943fb30
-MISC ChangeLog 5226 RMD160 01f3a32087dd1fc3c3a4edd2296f211fd1c168f8 SHA1 95e7f92b80772675714065fcd555b2c00dc3a520 SHA256 670abcea73d5e9d3d501251deaf43d8b5763c083e17d117d45e0e28686ef4595
+MISC ChangeLog 5317 RMD160 5cf8c3190348b6a38106dd72bf93746bb9dac6f0 SHA1 22a967420a4a0f91eba8dccc2d0b6de319438457 SHA256 27842a2d2895156266b196a39c1863ff67799a7ed7ab0c3cb1b32e51b67b344f
 MISC metadata.xml 177 RMD160 6467bd2d473a2e9b89fd3682519bc5a92e334cf2 SHA1 e1b4a7bd28c3601fd509278a156d9f960db38826 SHA256 29082e8bfba4be320ef8407b9efd5c20b4893cf0d42b9c6896aaed5b2ee78671
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkhTz6wACgkQNQqtfCuFneOgUQCdHUSMNpAQ+EdNUXpQlWBxFBqa
+1qQAn16bw6xtTgUgsLiddizJkD3AoBzy
+=J0pk
+-----END PGP SIGNATURE-----
