@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/navi2ch
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/navi2ch/ChangeLog,v 1.42 2008/06/14 13:23:38 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/navi2ch/ChangeLog,v 1.43 2008/06/14 14:03:14 opfer Exp $
+
+  14 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
+  -navi2ch-1.7.5.ebuild:
+  clean up
 
   14 Jun 2008; nixnut <nixnut@gentoo.org> navi2ch-1.7.5_p20070510.ebuild:
   Stable on ppc wrt bug 222039
